feat: complete traduction for english and spanish

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,14 +1,13 @@
 {
   "header": {
-    "products": "Products",
-    "solutions": "Solutions",
+    "dashboard": "Dashboard",
+    "payments": "Payments",
     "developers": "Developers",
-    "resources": "Resources",
-    "pricing": "Pricing",
+    "settings": "Settings",
     "login": "Sign in"
   },
   "hero": {
-    "title": "Your partnership with the future of global payments",
+    "title": "Your Partnership with the Future of Global Payments",
     "description": "With the support of our FX services, your company can enhance the efficiency of its international operations. Contact us for a professional assessment and discover how to boost your company's presence in the global market.",
     "ctaStart": "Get started",
     "ctaContact": "Contact us"
@@ -41,5 +40,106 @@
       "title": "Dedicated support",
       "description": "A specialized team guides you through every step of your international expansion."
     }
+  },
+  "signup": {
+    "title": "Create your account",
+    "subtitle": "Join the global payments platform",
+    "fullName": "Full name",
+    "email": "Email",
+    "username": "Username",
+    "password": "Password",
+    "createAccount": "Create account",
+    "alreadyHaveAccount": "Already have an account?",
+    "signIn": "Sign in",
+    "or": "or",
+    "creatingAccount": "Creating account...",
+    "success": "Account created successfully! Redirecting...",
+    "error": {
+      "required": "Please fill in all fields.",
+      "invalidResponse": "Invalid server response.",
+      "connection": "Connection error. Please check your network."
+    }
+  },
+  "login": {
+    "title": "Sign in to your account",
+    "subtitle": "Access your global payments dashboard",
+    "usernameOrEmail": "Username or email",
+    "password": "Password",
+    "staySignedIn": "Keep me signed in for a week",
+    "forgotPassword": "Forgot your password?",
+    "continue": "Continue",
+    "signingIn": "Signing in...",
+    "noAccount": "Don't have an account?",
+    "signUp": "Sign up",
+    "securityTip": "Security tip",
+    "sso": "Use single sign-on (SSO)",
+    "error": {
+      "credentials": "Incorrect credentials. Please try again.",
+      "connection": "Connection error. Please check your network."
+    }
+  },
+  "dashboard": {
+    "welcome": "Welcome, {username} 👋",
+    "summary": "Here is your financial summary.",
+    "totalSpent": "Total spent in {month}",
+    "topCategory": "Top category",
+    "totalWithdrawals": "Total spent",
+    "transactions": "Transactions",
+    "createNew": "Create new",
+    "noTransactions": "No transactions yet.",
+    "loading": "Loading...",
+    "headers": {
+      "currency": "Currency",
+      "amount": "Amount",
+      "description": "Description",
+      "name": "Name",
+      "documentType": "Document type",
+      "date": "Transaction date"
+    }
+  },
+  "cards": {
+    "title": "My cards",
+    "subtitle": "Manage your saved payment methods",
+    "addCard": "Add new card",
+    "savedCards": "Saved cards ({count})",
+    "noCards": "You don't have any saved cards yet.",
+    "deleteConfirm": "Are you sure you want to delete this card?",
+    "adding": "Adding...",
+    "success": "Card added successfully!",
+    "cardNumber": "Card number",
+    "expiryDate": "Expiry date",
+    "cvv": "CVV",
+    "cardholderName": "Cardholder name",
+    "saveCard": "Save this card for future payments",
+    "setDefault": "Set as default card"
+  },
+  "transactions": {
+    "title": "Make transaction",
+    "currency": "Currency",
+    "amount": "Amount",
+    "description": "Transaction description",
+    "fullName": "Full name",
+    "documentType": "Document type",
+    "cardNumber": "Card number",
+    "expiryDate": "Expiry date",
+    "cvv": "CVV",
+    "cardholderName": "Cardholder name",
+    "processing": "Processing transaction...",
+    "success": "Transaction completed successfully!",
+    "error": {
+      "required": "{field} is required",
+      "invalidCard": "Invalid card number",
+      "invalidExpiry": "Invalid expiry date",
+      "invalidCvv": "Invalid CVV",
+      "connection": "Connection error. Please check your network."
+    }
+  },
+  "documentTypes": {
+    "CC": "Citizenship ID",
+    "PP": "Passport"
+  },
+  "currencies": {
+    "COP": "Colombian Peso",
+    "USD": "US Dollar"
   }
 }
