feat: resolver sincronización con remoto

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "header": {
     "dashboard": "Dashboard",
+    "pricing": "Prices",
     "payments": "Payments",
     "developers": "Developers",
     "settings": "Settings",
