--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,6 +1,7 @@
 {
   "header": {
     "dashboard": "Panel Administrativo",
+    "pricing": "Precios",
     "payments": "Pagos",
     "developers": "Desarrolladores",
     "settings": "Configuración",
